adding fonts to index and tailwind config

--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
 
     <title>Fruits</title>
     <link rel="stylesheet" href="./client/styles/main.css" />
+    <!-- Lalezar Font Install -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Labrada:ital,wght@0,100..900;1,100..900&family=Lalezar&display=swap"
+      rel="stylesheet"
+    />
+    <!--  Labrada Font Install -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Labrada:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="app"></div>
